--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "inquirer": "^6.3.1",
+    "inquirer-fuzzy-path": "^2.0.3",
+    "path": "^0.12.7",
     "socket.io": "^2.2.0"
   }
 }
