--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "express": "^4.17.1",
     "inquirer": "^6.3.1",
+    "inquirer-autocomplete-prompt": "^1.0.1",
     "inquirer-fuzzy-path": "^2.0.3",
+    "inquirer-select-directory": "^1.2.0",
     "path": "^0.12.7",
     "socket.io": "^2.2.0"
   }
