--- a/client/package.json
+++ b/client/package.json
@@ -2,19 +2,25 @@
   "name": "expressapp",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "client.js",
+  "type": "module",
   "scripts": {
+    "start": "nodemon client.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
-    "inquirer": "^6.3.1",
-    "inquirer-autocomplete-prompt": "^1.0.1",
-    "inquirer-fuzzy-path": "^2.0.3",
+    "express": "^4.18.2",
+    "inquirer": "^9.1.4",
+    "inquirer-autocomplete-prompt": "^3.0.0",
+    "inquirer-fuzzy-path": "^2.3.0",
     "inquirer-select-directory": "^1.2.0",
     "path": "^0.12.7",
-    "socket.io": "^2.2.0"
+    "socket.io": "^4.5.4",
+    "socket.io-client": "^4.5.4"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
