--- a/server/package.json
+++ b/server/package.json
@@ -1,16 +1,17 @@
 {
-    "name": "expressapp",
-    "version": "1.0.0",
-    "description": "",
-    "scripts": {
-        "start": "nodemon server.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "express": "^4.17.1",
-        "socket.io": "^2.2.0",
-        "nodemon": "^1.19.1"
-    }
+  "name": "expressapp",
+  "version": "1.0.0",
+  "description": "",
+  "type": "module",
+  "scripts": {
+    "start": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.2",
+    "nodemon": "^2.0.20",
+    "socket.io": "^4.5.4"
+  }
 }
